--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "axios": "^1.7.2",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-window": "^1.8.10",
+    "react-window-infinite-loader": "^1.0.9"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
